# corner-monitor

./: README.md  package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  tray.rs  window.rs
src-tauri/src/monitor/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  types.rs
