[package]
name = "corner-monitor"
version = "0.0.1"
description = "A performance monitor placed in the corner of the screen."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "corner_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
battery = "0.7"
sysinfo = "0.36.1"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
image = "0.25.9"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2.4.1"
